# microservice-template

./: .gitignore  AGENT.md  DEVELOPER_GUIDE.md  README.md  pyproject.toml
src/create_microservice/: __init__.py  cli.py  scaffold.py
src/create_microservice/templates/: __init__.py  action_handler.py  action_schema.py  agent_md.py  ai_instructions.py  claude_md.py  claude_settings.py  config_py.py  copilot_md.py  developer_guide_md.py  env_example.py  main_py.py  pyproject_toml.py  readme.py  service_example.py  test_example.py
src/create_worker/: __init__.py  cli.py  scaffold.py
src/create_worker/templates/: __init__.py  action_handler.py  claude_md.py  claude_settings.py  conftest_py.py  copilot_md.py  env_example.py  gitignore.py  init_py.py  main_py.py  pyproject_toml.py  readme.py  service_example.py  test_example.py
tests/: test_cli.py  test_scaffold.py  test_templates.py
